# CEP-validation-so-que-mior

./: .gitignore  README.md  main.py  pyproject.toml
excel/: cep2306.xlsx
requests/: __init__.py
utils/: __init__.py  cache.py  cep.py  config.py
